# oncocartograph

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: data_sources.md  global_talent_evidence.md  manuscript.md  methods.md
docs/adr/: 0000-template.md  0001-tnbc-cohort-definition.md  0002-workflow-engine-choice.md  0003-external-validation-cohort.md  0004-gdc-rest-client-over-tcgabiolinks.md  0005-copy-number-workflow-and-transform.md  0006-mofa-plus-implementation-and-training.md  0007-survival-methodology-and-composite-score.md  0008-druggability-evidence-sources.md  0009-external-replication-methodology-and-result.md
notebooks/: README.md
src/oncocartograph/: __init__.py  config.py
src/oncocartograph/data_ingestion/: __init__.py  clinical.py  gdc_client.py  omics_ingestion.py  provenance.py  tnbc_cohort.py
src/oncocartograph/drug_targets/: __init__.py  chembl_client.py  druggability.py  open_targets_client.py  tractability.py
src/oncocartograph/integration/: __init__.py  mofa.py
src/oncocartograph/preprocessing/: __init__.py  copy_number.py  methylation.py  mutation.py  rna_seq.py  sample_manifest.py
src/oncocartograph/reporting/: __init__.py
src/oncocartograph/scoring/: README.md  __init__.py  association.py  composite.py  evidence.py  survival.py
src/oncocartograph/validation/: __init__.py  (+5 more)
tests/: __init__.py  test_config.py
tests/data_ingestion/: __init__.py  test_clinical.py  test_gdc_client.py  test_omics_ingestion.py  test_provenance.py  test_tnbc_cohort.py
tests/drug_targets/: __init__.py  test_chembl_client.py  test_druggability.py  test_open_targets_client.py  test_tractability.py
tests/integration/: __init__.py  test_mofa.py
tests/preprocessing/: __init__.py  test_copy_number.py  test_methylation.py  test_mutation.py  test_rna_seq.py  test_sample_manifest.py
tests/scoring/: __init__.py  test_association.py  test_composite.py  test_decoupling.py  test_evidence.py  test_survival.py
tests/validation/: __init__.py  test_burstein_check.py  test_gse96058_clinical.py  test_gse96058_cohort.py  test_gse96058_expression.py  test_replication.py
workflows/: README.md  Snakefile  config.yaml
workflows/scripts/: ingest_cohort.py  ingest_gse96058.py  ingest_omics.py  integrate_mofa.py  preprocess_copy_number.py  preprocess_methylation.py  preprocess_mutation.py  preprocess_rna_seq.py  score_candidates.py  score_druggability.py  validate_external.py
