[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oncocartograph"
version = "0.4.0"
description = "Multi-omics integration and druggable biomarker prioritisation for triple-negative breast cancer (TCGA-BRCA TNBC)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Nosakhare Osaro", email = "osaronosakhare@gmail.com" }]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "requests>=2.31",
    "pandas>=2.2",
    "pydeseq2>=0.4",
    "mofapy2>=0.7",
    "mofax>=0.3",
    "lifelines>=0.28",
    "scipy>=1.11",
]

[project.urls]
Homepage = "https://github.com/NosakhareOsaro/oncocartograph"
Repository = "https://github.com/NosakhareOsaro/oncocartograph"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "black>=24.3",
    "mypy>=1.9",
    "pre-commit>=3.7",
    "types-requests>=2.31",
    "pandas-stubs>=2.2",
    "scipy-stubs>=1.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/oncocartograph"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N", "D"]
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Test helper classes/fixtures are self-documenting via test names;
# requiring docstrings on every fake/stub method is noise, not signal.
"tests/**" = ["D"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["oncocartograph"]
mypy_path = "src"
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true

# pydeseq2/mofapy2/mofax ship no type stubs / py.typed marker (verified,
# not fixable from our side); ignore-missing-imports is scoped to just
# these packages rather than relaxed globally.
[[tool.mypy.overrides]]
module = ["pydeseq2.*", "mofapy2.*", "mofax.*", "lifelines.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=oncocartograph --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["src/oncocartograph"]
branch = true
